@@ -12,21 +12,21 @@ public class DiapasonTest {
     @Test
     public void whenLinearFunctionThenLinearResults() {
         List<Double> result = Diapason.diapason(5, 8, x -> 2 * x + 1);
-        List<Double> expected = Arrays.asList(11D, 13D, 15D);
+        List<Double> expected = List.of(11D, 13D, 15D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenQuadraticFunctionThenQuadraticResults() {
         List<Double> result = Diapason.diapason(5, 8, x -> 3 * x * x + 5 * x + 6);
-        List<Double> expected = Arrays.asList(106D, 144D, 188D);
+        List<Double> expected = List.of(106D, 144D, 188D);
         assertThat(result, is(expected));
     }
 
     @Test
     public void whenExponentialFunctionThenExponentialResults() {
         List<Double> result = Diapason.diapason(5, 8, x -> Math.pow(3, x));
-        List<Double> expected = Arrays.asList(243D, 729D, 2187D);
+        List<Double> expected = List.of(243D, 729D, 2187D);
         assertThat(result, is(expected));
     }
 }
